--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-Bleu Vox Website
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bleu Vox | Metal Artist</title>
+  <meta name="description" content="Bleu Vox — metal." />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<header>
+  <nav>
+    <div class="logo">BLEU VOX</div>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#music">Music</a></li>
+      <li><a href="#shows">Shows</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+
+<section class="hero">
+  <div class="hero-content">
+    <h1>BLEU VOX</h1>
+    <p>.</p>
+    <div class="cta">
+      <a href="#music" class="btn">Listen Now</a>
+      <a href="#contact" class="btn alt">Booking</a>
+    </div>
+  </div>
+</section>
+
+<section id="about">
+  <h2>About</h2>
+  <div class="about">
+    <div class="panel">
+      <p>Bleu Vox ....</p>
+    </div>
+    <div class="panel">
+      <p>Metal .</p>
+    </div>
+  </div>
+</section>
+
+<section id="music">
+  <h2>Music</h2>
+  <div class="music-grid">
+    <div class="track"><h3>Track One</h3><span>Single · 2025</span></div>
+    <div class="track"><h3>Track Two</h3><span>Single · 2025</span></div>
+    <div class="track"><h3>Track Three</h3><span>EP · 2025</span></div>
+  </div>
+</section>
+
+<section id="shows">
+  <h2>Live Shows</h2>
+  <div class="shows">
+    <div class="show">
+      <div class="date">MAR 22</div>
+      <div><strong>Venue Name</strong><br>City, Country</div>
+      <a href="#" class="btn alt">Tickets</a>
+    </div>
+  </div>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <div class="panel">
+    <p>Booking & Press:<br>
+      <a href="mailto:bleuvox01@gmail.com">bleuvox01@gmail.com</a>
+    </p>
+  </div>
+</section>
+
+</main>
+
+<footer>
+  <p>© 2025 Bleu Vox</p>
+</footer>
+
+</body>
+</html>
