--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bleu Vox | Metal Artist</title>
-  <meta name="description" content="Bleu Vox — metal." />
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <meta name="description" content="Bleu Vox — ." />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&family=Montserrat:wght@300;400;600&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,7 +33,10 @@
 <section class="hero">
   <div class="hero-content">
     <h1>BLEU VOX</h1>
-    <p>.</p>
+    <p>
+      
+      .
+    </p>
     <div class="cta">
       <a href="#music" class="btn">Listen Now</a>
       <a href="#contact" class="btn alt">Booking</a>
@@ -40,10 +48,14 @@
   <h2>About</h2>
   <div class="about">
     <div class="panel">
-      <p>Bleu Vox ....</p>
+      <p>
+        Bleu Vox.
+      </p>
     </div>
     <div class="panel">
-      <p>Metal .</p>
+      <p>
+       .
+      </p>
     </div>
   </div>
 </section>
@@ -51,9 +63,18 @@
 <section id="music">
   <h2>Music</h2>
   <div class="music-grid">
-    <div class="track"><h3>Track One</h3><span>Single · 2025</span></div>
-    <div class="track"><h3>Track Two</h3><span>Single · 2025</span></div>
-    <div class="track"><h3>Track Three</h3><span>EP · 2025</span></div>
+    <div class="track">
+      <h3>Track One</h3>
+      <span>Single · 2025</span>
+    </div>
+    <div class="track">
+      <h3>Track Two</h3>
+      <span>Single · 2025</span>
+    </div>
+    <div class="track">
+      <h3>Track Three</h3>
+      <span>EP · 2025</span>
+    </div>
   </div>
 </section>
 
@@ -62,7 +83,10 @@
   <div class="shows">
     <div class="show">
       <div class="date">MAR 22</div>
-      <div><strong>Venue Name</strong><br>City, Country</div>
+      <div>
+        <strong>Venue Name</strong><br>
+        City, Country
+      </div>
       <a href="#" class="btn alt">Tickets</a>
     </div>
   </div>
@@ -71,7 +95,8 @@
 <section id="contact">
   <h2>Contact</h2>
   <div class="panel">
-    <p>Booking & Press:<br>
+    <p>
+      Booking & Press:<br>
       <a href="mailto:bleuvox01@gmail.com">bleuvox01@gmail.com</a>
     </p>
   </div>
@@ -85,3 +110,4 @@
 
 </body>
 </html>
+
