--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bleu Vox | Metal Artist</title>
 
-  <meta name="description" content="Bleu Vox — ." />
+  <meta name="description" content="Bleu Vox — " />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&family=Montserrat:wght@300;400;600&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
@@ -19,12 +19,16 @@
 <header>
   <nav>
     <div class="logo">BLEU VOX</div>
-    <ul>
+
+    <ul class="nav-links">
+      <li><a href="/">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#music">Music</a></li>
       <li><a href="#shows">Shows</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
+
+    <a href="/" class="home-btn">← Home</a>
   </nav>
 </header>
 
@@ -49,12 +53,12 @@
   <div class="about">
     <div class="panel">
       <p>
-        Bleu Vox.
+        Bleu Vox is a metal project focused on intensity, contrast, and emotional truth.
       </p>
     </div>
     <div class="panel">
       <p>
-       .
+        Modern metal, industrial textures, and cinematic sound design collide.
       </p>
     </div>
   </div>
@@ -110,4 +114,3 @@
 
 </body>
 </html>
-
