--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bleu Vox | Metal Artist</title>
-
-  <meta name="description" content="Bleu Vox — " />
+  <meta name="description" content="Bleu Vox —." />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600&family=Montserrat:wght@300;400;600&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Explora&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css" />
@@ -53,12 +51,12 @@
   <div class="about">
     <div class="panel">
       <p>
-        Bleu Vox is a metal project focused on intensity, contrast, and emotional truth.
+        Bleu Vox
       </p>
     </div>
     <div class="panel">
       <p>
-        Modern metal, industrial textures, and cinematic sound design collide.
+        Metal.
       </p>
     </div>
   </div>
@@ -68,16 +66,16 @@
   <h2>Music</h2>
   <div class="music-grid">
     <div class="track">
-      <h3>Track One</h3>
-      <span>Single · 2025</span>
+      <h3>Coming Soon</h3>
+      <span>·</span>
     </div>
     <div class="track">
-      <h3>Track Two</h3>
-      <span>Single · 2025</span>
+      <h3></h3>
+      <span> · </span>
     </div>
     <div class="track">
-      <h3>Track Three</h3>
-      <span>EP · 2025</span>
+      <h3></h3>
+      <span>· </span>
     </div>
   </div>
 </section>
@@ -86,12 +84,12 @@
   <h2>Live Shows</h2>
   <div class="shows">
     <div class="show">
-      <div class="date">MAR 22</div>
+      <div class="date"></div>
       <div>
-        <strong>Venue Name</strong><br>
-        City, Country
+        <strong></strong><br>
+        ,
       </div>
-      <a href="#" class="btn alt">Tickets</a>
+      <a href="#" class="btn alt"></a>
     </div>
   </div>
 </section>
