--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bleu Vox | Metal Artist</title>
-  <meta name="description" content="Bleu Vox —." />
+  <meta name="description" content="Bleu Vox — ." />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Explora&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
   <div class="about">
     <div class="panel">
       <p>
-        Bleu Vox
+        Bleu Vox.
       </p>
     </div>
     <div class="panel">
@@ -66,8 +66,8 @@
   <h2>Music</h2>
   <div class="music-grid">
     <div class="track">
-      <h3>Coming Soon</h3>
-      <span>·</span>
+      <h3>Coming Soon..</h3>
+      <span> · </span>
     </div>
     <div class="track">
       <h3></h3>
@@ -75,7 +75,7 @@
     </div>
     <div class="track">
       <h3></h3>
-      <span>· </span>
+      <span>·</span>
     </div>
   </div>
 </section>
@@ -87,9 +87,9 @@
       <div class="date"></div>
       <div>
         <strong></strong><br>
-        ,
+        
       </div>
-      <a href="#" class="btn alt"></a>
+      <a href="#" class="btn alt">Tickets</a>
     </div>
   </div>
 </section>
