--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header>
   <nav>
-    <div class="logo">BLEU VOX</div>
+    <div class="logo">Bleu Vox</div>
 
     <ul class="nav-links">
       <li><a href="/">Home</a></li>
@@ -34,7 +34,7 @@
 
 <section class="hero">
   <div class="hero-content">
-    <h1>BLEU VOX</h1>
+    <h1>Bleu Vox</h1>
     <p>
       
       .
