--- a/index.html
+++ b/index.html
@@ -1,113 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bleu Vox | Metal Artist</title>
-  <meta name="description" content="Bleu Vox — ." />
+  <meta charset="UTF-8">
+  <title>Bleu Vox</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Explora&family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Explora&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
   <nav>
     <div class="logo">Bleu Vox</div>
-
     <ul class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#music">Music</a></li>
-      <li><a href="#shows">Shows</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="music.html">Music</a></li>
+      <li><a href="shows.html">Shows</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
-
-    <a href="/" class="home-btn">← Home</a>
   </nav>
 </header>
 
-<main>
-
 <section class="hero">
-  <div class="hero-content">
+  <div>
     <h1>Bleu Vox</h1>
-    <p>
-      
-      .
-    </p>
+    <p>.</p>
+
     <div class="cta">
-      <a href="#music" class="btn">Listen Now</a>
-      <a href="#contact" class="btn alt">Booking</a>
+      <a href="music.html" class="btn">Listen</a>
+      <a href="contact.html" class="btn alt">Booking</a>
     </div>
   </div>
 </section>
-
-<section id="about">
-  <h2>About</h2>
-  <div class="about">
-    <div class="panel">
-      <p>
-        Bleu Vox.
-      </p>
-    </div>
-    <div class="panel">
-      <p>
-        Metal.
-      </p>
-    </div>
-  </div>
-</section>
-
-<section id="music">
-  <h2>Music</h2>
-  <div class="music-grid">
-    <div class="track">
-      <h3>Coming Soon..</h3>
-      <span> · </span>
-    </div>
-    <div class="track">
-      <h3></h3>
-      <span> · </span>
-    </div>
-    <div class="track">
-      <h3></h3>
-      <span>·</span>
-    </div>
-  </div>
-</section>
-
-<section id="shows">
-  <h2>Live Shows</h2>
-  <div class="shows">
-    <div class="show">
-      <div class="date"></div>
-      <div>
-        <strong></strong><br>
-        
-      </div>
-      <a href="#" class="btn alt">Tickets</a>
-    </div>
-  </div>
-</section>
-
-<section id="contact">
-  <h2>Contact</h2>
-  <div class="panel">
-    <p>
-      Booking & Press:<br>
-      <a href="mailto:bleuvox01@gmail.com">bleuvox01@gmail.com</a>
-    </p>
-  </div>
-</section>
-
-</main>
 
 <footer>
-  <p>© 2025 Bleu Vox</p>
+  © 2025 Bleu Vox
 </footer>
 
 </body>
