--- a/shows.html
+++ b/shows.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Shows – Bleu Vox</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Explora&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+  <nav>
+    <div class="logo">Bleu Vox</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="music.html">Music</a></li>
+      <li><a href="shows.html">Shows</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<section>
+  <h2>Shows</h2>
+
+  <div class="panel">
+    <p>No upcoming shows announced.</p>
+  </div>
+</section>
+
+<footer>
+  © 2025 Bleu Vox
+</footer>
+
+</body>
+</html>
 
