--- a/music.html
+++ b/music.html
@@ -56,13 +56,13 @@
     </iframe>
   </div>
 
-  <!-- STREAMING LINKS -->
+  <!-- STREAMING LINKS PANEL -->
   <div class="panel">
     <p>Listen on:</p>
     <p>
       <a href="https://open.spotify.com/track/1DhM9jKGHaIPBB3t0JwvqL" target="_blank">Spotify</a><br>
       <a href="https://music.apple.com/in/song/alcoholic/1865656832" target="_blank">Apple Music</a><br>
-      <a href="SOUNDCLOUD_LINK" target="_blank">SoundCloud</a>
+      <a href="https://soundcloud.com/bleu-vox/alcoholic?si=3dcaca2f1430466cad571502a5723a9b&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">SoundCloud</a>
     </p>
   </div>
 </section>
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
