--- a/music.html
+++ b/music.html
@@ -27,25 +27,25 @@
       font-size: 1.55rem;
     }
 
-    /* Streaming links as glowing buttons */
+    /* Streaming links as subtle glowing buttons */
     .panel.streaming-links a {
       display: inline-block;
       padding: 12px 28px;
       margin: 6px 0;
-      border: 1px solid var(--accent);
+      border: 1px solid var(--accent); /* thinner border */
       background: linear-gradient(135deg, var(--accent-dark), var(--accent));
-      color: #fff;
+      color: #000; /* black text */
       text-decoration: none;
       font-size: 1.65rem;
       font-weight: bold;
       border-radius: 8px;
-      box-shadow: 0 0 10px #fff, 0 0 25px var(--accent);
+      box-shadow: 0 0 5px #fff, 0 0 25px var(--accent); /* subtle white glow */
       transition: all 0.3s ease;
     }
 
     .panel.streaming-links a:hover {
       transform: translateY(-2px);
-      box-shadow: 0 0 20px #fff, 0 0 35px var(--accent);
+      box-shadow: 0 0 8px #fff, 0 0 35px var(--accent); /* subtle hover glow */
     }
   </style>
 </head>
